# CUDA_physics_engine

./: .gitignore  CMakeLists.txt  README.md
shaders/: basic3d.frag  basic3d.vert  compute.glsl
src/: main.cpp
src/core/: application.cpp  application.h
src/physics/: physics.cu  physics.h
src/render/: renderer.cpp  renderer.h
src/ui/: ui_manager.cpp  ui_manager.h
